force-app/main/default/objects/Product2/fields/Available_to_Guest_Buyers__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Guest_Buyers__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Available to Guest Buyers</label>
    <type>Checkbox</type>
</CustomField>