force-app/main/default/objects/Product2/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adidas</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Ermenegildo Zenia</fullName>
            </value>
            <value>
                <fullName>Max Mara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>