force-app/main/default/objects/Product2/fields/Fitting__c.field-meta.xml
<CustomField>
    <fullName>Fitting__c</fullName>
    <label>Fitting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>