force-app/main/default/objects/Product2/fields/Lens_Type__c.field-meta.xml
<CustomField>
    <fullName>Lens_Type__c</fullName>
    <label>Lens Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crystal</fullName>
            </value>
            <value>
                <fullName>Kolor-up</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Optimized</fullName>
            </value>
            <value>
                <fullName>Photochromic</fullName>
            </value>
            <value>
                <fullName>Polarized</fullName>
            </value>
            <value>
                <fullName>Polarized Crystal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>