force-app/main/default/objects/Product2/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Alluminum</fullName>
            </value>
            <value>
                <fullName>Horn</fullName>
            </value>
            <value>
                <fullName>Titanium</fullName>
            </value>
            <value>
                <fullName>Injected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>