force-app/main/default/objects/Product2/fields/Shape__c.field-meta.xml
<CustomField>
    <fullName>Shape__c</fullName>
    <label>Shape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Browline</fullName>
            </value>
            <value>
                <fullName>Butterfly</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Geometric</fullName>
            </value>
            <value>
                <fullName>Lector</fullName>
            </value>
            <value>
                <fullName>Navigator</fullName>
            </value>
            <value>
                <fullName>Oval</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Rectangular</fullName>
            </value>
            <value>
                <fullName>Round</fullName>
            </value>
            <value>
                <fullName>Shield</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>